--- a/public/dashboard/css/responsive.css
+++ b/public/dashboard/css/responsive.css
@@ -33,7 +33,7 @@
     left: 0px;
   }
   .toggled .page-footer {
-    left: 0px;
+    margin-left: 0px;
   }
   .toggled .main-wrapper {
     margin-left: 0;
@@ -77,7 +77,7 @@
   }
   /*page footer*/
   .page-footer {
-    left: 0px;
+    margin-left: 0px;
   }
   /*mini sidebar*/
   .mini-sidebar {
